--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 terraform/.terraform
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
 secrets
 testDestroy.sh
